k8s/Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: __NS__
  labels:
    app.kubernetes.io/managed-by: "jenkins"
    environment: "production"
